# AIHeuristicLearningApp

./: .gitignore  .npmrc  .replit  BUILD.md  README-PRODUCTION.md  README.md  add_memory_embeddings.js  batch_process_embeddings.js  build-and-start.js  build-frontend.js  build.sh  cache_system_analysis.md  check_dimensions.cjs  check_dimensions.js  check_dimensions_esm.js  check_embedding_api.mjs  check_embedding_progress.js  check_memory_dimensions.js  check_memory_embeddings.js  check_nodes_fields.js  cleanup_ghost_memories.sql  clear_graph_cache.js  cookie.txt  create_test_data.ts  database_design_report.md  database_er_diagram.txt  database_migration_guide.md  database_performance_report.md  database_query_examples.sql  database_security_audit.md  debug-copy.sh  debug-dify-api.js  debug_report_memory_ai_system.md  deploy-esm.js  deploy-fast.js  deploy-fix-v2.sh  deploy-fix-v3.sh  deploy-fix.sh  deploy-prepare.sh  deploy-simple.js  (+170 more)
attached_assets/: Pasted--1--1742557975993.txt  Pasted--1-1-1-memory-space--1744770327362.txt  Pasted--1-Python-1-from-google-import-1743634802182.txt  Pasted--AI-DeepSeek-NVIDIA-NIM-Gemini-Grok--1745573116411.txt  Pasted--AI-DeepSeek-R1-NVIDIA-NIM-Gemini-2-5-P-1745568703742.txt  Pasted--API-Key-GenAI-API-Key--1746265028461.txt  Pasted--CSS-1-grid-Flex--1745658187407.txt  Pasted--Dify-API-conversation-id-Dify-Issue-2024-9-Dify-Chat-1745574087759.txt  Pasted--EPIPE-Broken-Pipe-14-51-31--1746265019893.txt  Pasted--LLM-LLM--1745938242877.txt  Pasted--MCP-MCP-MCP-1--1745229406480.txt  Pasted--Node-js-npm-run-dev-Express--1742553363380.txt  (+14 more)
(+373 files in other folders)
